@@ -73,6 +73,7 @@ public class Commands
         commands.put("exec", new ExecCommand(guiManager, crossfireServerConnection));
         commands.put("set", new SetCommand(crossfireServerConnection, optionManager));
         commands.put("clear", new ClearCommand(windowRenderer, crossfireServerConnection));
+        commands.put("debug_colors", new DebugColorsCommand(crossfireServerConnection));
     }
 
     /**
